--- a/landing.html
+++ b/landing.html
@@ -83,7 +83,7 @@
       >
         <div
           class="absolute top-0 w-full h-full bg-center bg-cover"
-          style='background-image: url("https://images.unsplash.com/photo-1503252947848-7338d3f92f31?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=889&q=80");'
+          style='background-image: url("https://images.unsplash.com/photo-1520583457224-aee11bad5112?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=401&q=80");'
         >
           <span
             id="blackOverlay"
@@ -95,7 +95,7 @@
             <div class="w-full lg:w-6/12 px-4 ml-auto mr-auto text-center">
               <div class="pr-12">
                 <h1 class="text-white font-semibold text-5xl">
-                  Oram Wells <span class="text-orange-500">Technology</span>
+                  Oram Wells, <span class="text-orange-500">Inc</span>
                 </h1>
                 <p class="mt-4 text-lg text-gray-300">
                   This is a simple example of a Landing Page you can build using
