--- a/index.html
+++ b/index.html
@@ -777,237 +777,174 @@
         <div class="container mx-auto px-4 lg:pt-24 lg:pb-64">
           <div class="flex flex-wrap text-center justify-center">
             <div class="w-full lg:w-6/12 px-4">
-              <h2 class="text-4xl font-semibold text-white">Build something</h2>
-              <p class="text-lg leading-relaxed mt-4 mb-4 text-gray-500">
-                Put the potentially record low maximum sea ice extent tihs year
-                down to low ice. According to the National Oceanic and
-                Atmospheric Administration, Ted, Scambos.
-              </p>
+              <h2 class="text-4xl font-semibold text-white">Skills</h2>
+              <h2 class="text-2xl font-semibold text-white">Web</h2>
+
+              
             </div>
           </div>
           <div class="flex flex-wrap mt-12 justify-center">
-            <div class="w-full lg:w-3/12 px-4 text-center">
-              <div
+            <div class="w-full lg:w-5/12 px-4 text-center">
+              <button
                 class="
-                  text-gray-900
-                  p-3
-                  w-12
-                  h-12
                   shadow-lg
-                  rounded-full
-                  bg-white
+                  bg-blue-400
                   inline-flex
                   items-center
                   justify-center
-                "
-              >
-                <i class="fas fa-medal text-xl"></i>
-              </div>
-              <h6 class="text-xl mt-5 font-semibold text-white">
-                Excelent Services
-              </h6>
-              <p class="mt-2 mb-4 text-gray-500">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-            </div>
-            <div class="w-full lg:w-3/12 px-4 text-center">
-              <div
-                class="
-                  text-gray-900
-                  p-3
-                  w-12
-                  h-12
-                  shadow-lg
+                  px-3
+                  py-2
                   rounded-full
-                  bg-white
-                  inline-flex
-                  items-center
-                  justify-center
-                "
-              >
-                <i class="fas fa-poll text-xl"></i>
-              </div>
-              <h5 class="text-xl mt-5 font-semibold text-white">
-                Grow your market
-              </h5>
-              <p class="mt-2 mb-4 text-gray-500">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-            </div>
-            <div class="w-full lg:w-3/12 px-4 text-center">
-              <div
-                class="
-                  text-gray-900
-                  p-3
-                  w-12
-                  h-12
+                  border-1
+                  border-violet-400
+                  focus:outline-none
                   shadow-lg
-                  rounded-full
-                  bg-white
-                  inline-flex
-                  items-center
-                  justify-center
+                  font-bold
+                  text-lg
+                  text-white
                 "
               >
-                <i class="fas fa-lightbulb text-xl"></i>
-              </div>
-              <h5 class="text-xl mt-5 font-semibold text-white">Launch time</h5>
-              <p class="mt-2 mb-4 text-gray-500">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
+              ReactJs
+              </button>
+              <button
+              class="
+                shadow-lg
+                bg-white
+                inline-flex
+                items-center
+                justify-center
+                p-2
+                rounded-full
+                border-1
+                border-violet-400
+                focus:outline-none
+                shadow-lg
+                font-semibold
+                text-lg
+              "
+            >
+            SAAS
+            </button>
+            <button
+            class="
+              shadow-lg
+              bg-white
+              inline-flex
+              items-center
+              justify-center
+              p-2
+              rounded-full
+              border-1
+              border-violet-400
+              focus:outline-none
+              shadow-lg
+              font-semibold
+              text-lg
+            "
+          >
+          MaterialUI
+          </button>
+          <button
+          class="
+            shadow-lg
+            bg-white
+            inline-flex
+            items-center
+            justify-center
+            p-2
+            rounded-full
+            border-1
+            border-violet-400
+            focus:outline-none
+            shadow-lg
+            font-semibold
+            text-lg
+          "
+        >
+        SemanticUI
+        </button>
+        <button
+        class="
+          shadow-lg
+          bg-white
+          inline-flex
+          items-center
+          justify-center
+          p-2
+          rounded-full
+          border-1
+          border-violet-400
+          focus:outline-none
+          shadow-lg
+          font-semibold
+          text-lg
+        "
+      >
+      Antd
+      </button>
+      <button
+      class="
+        shadow-lg
+        bg-white
+        inline-flex
+        items-center
+        justify-center
+        p-2
+        rounded-full
+        border-1
+        border-violet-400
+        focus:outline-none
+        shadow-lg
+        font-semibold
+        text-lg
+      "
+    >
+    Tailwindcss
+    </button>
+    <button
+    class="
+      shadow-lg
+      bg-white
+      inline-flex
+      items-center
+      justify-center
+      p-2
+      rounded-full
+      border-1
+      border-violet-400
+      focus:outline-none
+      shadow-lg
+      font-semibold
+      text-lg
+    "
+  >
+  React Native
+  </button>
+  <button
+  class="
+    shadow-lg
+    bg-white
+    inline-flex
+    items-center
+    justify-center
+    p-2
+    rounded-full
+    border-1
+    border-violet-400
+    focus:outline-none
+    shadow-lg
+    font-semibold
+    text-lg
+  "
+>
+Next.js
+</button>
+
             </div>
           </div>
         </div>
       </section>
-      <section class="relative block py-24 lg:pt-0 bg-gray-900">
-        <div class="container mx-auto px-4">
-          <div class="flex flex-wrap justify-center lg:-mt-64 -mt-48">
-            <div class="w-full lg:w-6/12 px-4">
-              <div
-                class="
-                  relative
-                  flex flex-col
-                  min-w-0
-                  break-words
-                  w-full
-                  mb-6
-                  shadow-lg
-                  rounded-lg
-                  bg-gray-300
-                "
-              >
-                <div class="flex-auto p-5 lg:p-10">
-                  <h4 class="text-2xl font-semibold">Want to work with us?</h4>
-                  <p class="leading-relaxed mt-1 mb-4 text-gray-600">
-                    Complete this form and we will get back to you in 24 hours.
-                  </p>
-                  <div class="relative w-full mb-3 mt-8">
-                    <label
-                      class="
-                        block
-                        uppercase
-                        text-gray-700 text-xs
-                        font-bold
-                        mb-2
-                      "
-                      for="full-name"
-                      >Full Name</label
-                    ><input
-                      type="text"
-                      class="
-                        border-0
-                        px-3
-                        py-3
-                        placeholder-gray-400
-                        text-gray-700
-                        bg-white
-                        rounded
-                        text-sm
-                        shadow
-                        focus:outline-none
-                        focus:ring
-                        w-full
-                      "
-                      placeholder="Full Name"
-                      style="transition: all 0.15s ease 0s"
-                    />
-                  </div>
-                  <div class="relative w-full mb-3">
-                    <label
-                      class="
-                        block
-                        uppercase
-                        text-gray-700 text-xs
-                        font-bold
-                        mb-2
-                      "
-                      for="email"
-                      >Email</label
-                    ><input
-                      type="email"
-                      class="
-                        border-0
-                        px-3
-                        py-3
-                        placeholder-gray-400
-                        text-gray-700
-                        bg-white
-                        rounded
-                        text-sm
-                        shadow
-                        focus:outline-none
-                        focus:ring
-                        w-full
-                      "
-                      placeholder="Email"
-                      style="transition: all 0.15s ease 0s"
-                    />
-                  </div>
-                  <div class="relative w-full mb-3">
-                    <label
-                      class="
-                        block
-                        uppercase
-                        text-gray-700 text-xs
-                        font-bold
-                        mb-2
-                      "
-                      for="message"
-                      >Message</label
-                    ><textarea
-                      rows="4"
-                      cols="80"
-                      class="
-                        border-0
-                        px-3
-                        py-3
-                        placeholder-gray-400
-                        text-gray-700
-                        bg-white
-                        rounded
-                        text-sm
-                        shadow
-                        focus:outline-none
-                        focus:ring
-                        w-full
-                      "
-                      placeholder="Type a message..."
-                    ></textarea>
-                  </div>
-                  <div class="text-center mt-6">
-                    <button
-                      class="
-                        bg-gray-900
-                        text-white
-                        active:bg-gray-700
-                        text-sm
-                        font-bold
-                        uppercase
-                        px-6
-                        py-3
-                        rounded
-                        shadow
-                        hover:shadow-lg
-                        outline-none
-                        focus:outline-none
-                        mr-1
-                        mb-1
-                      "
-                      type="button"
-                      style="transition: all 0.15s ease 0s"
-                    >
-                      Send Message
-                    </button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
+     
     </main>
     <footer class="relative bg-gray-300 pt-8 pb-6">
       <div
