--- a/index.html
+++ b/index.html
@@ -1073,6 +1073,101 @@
 
             </div>
           </div>
+
+          <!-- Databases -->
+          <div class="flex flex-row mt-12 items-center justify-center">
+            <div class=" text-2xl font-semibold text-orange-500">
+               Databases
+            </div>
+           
+            <div class="w-full lg:w-5/12 px-4 text-start">
+              <button
+                class="
+                shadow-lg
+                bg-white
+                inline-flex
+                items-center
+                justify-center
+                px-3
+                py-1
+                m-2
+                rounded-full
+                border-1 border-violet-400
+                focus:outline-none
+                shadow-lg
+                text-lg
+                text-gray-700
+                font-semibold
+                "
+              >
+                MongoDB
+              </button>
+              <button
+                class="
+                shadow-lg
+                bg-white
+                inline-flex
+                items-center
+                justify-center
+                px-3
+                py-1
+                m-2
+                rounded-full
+                border-1 border-violet-400
+                focus:outline-none
+                shadow-lg
+                text-lg
+                text-gray-700
+                font-semibold
+                "
+              >
+                MySQL
+              </button>
+              <button
+                class="
+                shadow-lg
+                bg-white
+                inline-flex
+                items-center
+                justify-center
+                px-3
+                py-1
+                m-2
+                rounded-full
+                border-1 border-violet-400
+                focus:outline-none
+                shadow-lg
+                text-lg
+                text-gray-700
+                font-semibold
+                "
+              >
+                Postgress
+              </button>
+              <button
+                class="
+                shadow-lg
+                bg-white
+                inline-flex
+                items-center
+                justify-center
+                px-3
+                py-1
+                m-2
+                rounded-full
+                border-1 border-violet-400
+                focus:outline-none
+                shadow-lg
+                text-lg
+                text-gray-700
+                font-semibold
+                "
+              >
+                Redis
+              </button>
+              
+            </div>
+          </div>
         </div>
       </section>
     </main>
